--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 <!-- Cobertura coverage: mvn site-->
 <reporting>
   <plugins>
+    
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -49,6 +50,7 @@
          <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
       </configuration>
     </plugin>
+    
     <plugin>
       <groupId>org.codehaus.mojo</groupId>
       <artifactId>cobertura-maven-plugin</artifactId>
@@ -60,6 +62,31 @@
          </formats>
       </configuration>
     </plugin>
+    
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-checkstyle-plugin</artifactId>
+      <version>3.0.0</version>
+      <reportSets>
+        <reportSet>
+          <reports>
+            <report>checkstyle</report>
+          </reports>
+        </reportSet>
+      </reportSets>
+    </plugin>
+    
+    <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/findbugs-maven-plugin -->
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>findbugs-maven-plugin</artifactId>
+      <version>3.0.5</version>
+      <configuration>
+        <threshold>Default</threshold>
+        <effort>Default</effort>
+      </configuration>
+    </plugin>
+    
   </plugins>
 </reporting>
 
